Allow consulting reports (#58)
* Update texts

* Add report model

* Add reporting route

* Add reporting template

* Display reports list

* Download reports

* Regenerate reports

* Add homescreen tile for administration

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -338,9 +338,8 @@
           <AuHeading @level="2" @skin="3">Versies</AuHeading>
         </div>
         <AuHelpText @skin="secondary" class="au-u-margin-top-none">
-          Ontdek hier vorige versies van het BPMN-diagram van dit proces,
-          geüpload in het Open Proces Huis. Deze versies zijn beschikbaar om te
-          downloaden.
+          Ontdek hier vorige versies van het diagram van dit proces, geüpload in
+          het Open Proces Huis. Deze versies zijn beschikbaar om te downloaden.
         </AuHelpText>
       </div>
 
@@ -448,9 +447,11 @@
           </AuButtonGroup>
         </div>
         <AuHelpText @skin="secondary" class="au-u-margin-top-none">
-          Bijlagen kunnen worden toegevoegd om het BPMN-diagram te
-          verduidelijken in alle bestandsformaten, behalve
-          <span class="au-u-italic">.bpmn</span>.
+          Bijlagen kunnen worden toegevoegd om het diagram te verduidelijken in
+          alle bestandsformaten, behalve
+          <span class="au-u-italic">.bpmn</span>
+          en
+          <span class="au-u-italic">.vsdx</span>.
         </AuHelpText>
       </div>
 
