--- a/app/components/ipdc-multiple-select.hbs
+++ b/app/components/ipdc-multiple-select.hbs
@@ -9,6 +9,7 @@
     @onChange={{@onChange}}
     as |ipdcInstance|
   >
-    {{ipdcInstance.name}}
+    {{ipdcInstance.nameNl}}
+    ({{ipdcInstance.productNumber}})
   </PowerSelectMultiple>
 </div>
