Fix styling issues

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -176,6 +176,7 @@
                   {{#each this.process.ipdcInstances as |instance|}}
                     <AuLinkExternal
                       href="https://productencatalogus-v3.vlaanderen.be/instantie/{{instance.productNumber}}"
+                      class="au-u-flex"
                     >
                       {{instance.nameNl}}
                     </AuLinkExternal>
