Refactor ipdc instances editing by keeping track of draft

--- a/app/components/ipdc-multiple-select.hbs
+++ b/app/components/ipdc-multiple-select.hbs
@@ -7,9 +7,9 @@
     @search={{perform this.loadIpdcInstancesTask}}
     @selected={{@selected}}
     @onChange={{@onChange}}
-    as |ipdcInstance|
+    as |draftIpdcInstance|
   >
-    {{ipdcInstance.nameNl}}
-    ({{ipdcInstance.productNumber}})
+    {{language-string-set-nl draftIpdcInstance.name}}
+    ({{draftIpdcInstance.productNumber}})
   </PowerSelectMultiple>
 </div>
