Keep track of IPDC instances (#60)
* Remove console log

* Add ipdc instance model

* Add input field for ipdc

* Use multiple select for ipdc

* Use lpdc code or url

* Use ipdc api

* Include ipdc instances on process load

* Refactor

* Don't set ipdc instance id

* Keep track of ipdc instances

* Display added ipdc instances

* Show slash in case of no ipdc instances

* Bugfix

* Don't print out ipdc api error

* Save new ipdc instances

* Fix styling issues

* Merge branch 'development' into feature/ipdc

* Save new process ipdc instances by default

* Make ipdc instances removable

* Refactor ipdc instances editing by keeping track of draft

* Prevent double ipdc instances

* Make sure triplestore doesn't contain doube ipdc instances

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -57,6 +57,29 @@
                   />
                 </:content>
               </Item>
+              <Item>
+                <:label>Links naar IPDC/LPDC</:label>
+                <:content>
+                  <IpdcMultipleSelect
+                    @selected={{this.draftIpdcInstances}}
+                    @onChange={{this.setDraftIpdcInstances}}
+                  />
+                  <div class="au-u-flex au-u-flex--between">
+                    <AuHelpText
+                      @skin="secondary"
+                      class="au-u-margin-top-none au-u-flex-self-start"
+                    >
+                      Vul hier IPDC-productcodes of -URLs in.
+                    </AuHelpText>
+                    <AuLinkExternal
+                      class="au-u-flex-self-start"
+                      href="https://productencatalogus-v3.vlaanderen.be/nl/producten"
+                    >
+                      Zoek in IPDC
+                    </AuLinkExternal>
+                  </div>
+                </:content>
+              </Item>
             </:left>
             <:right as |Item|>
               <Item>
@@ -144,6 +167,23 @@
               <:label>Contact proces</:label>
               <:content>
                 {{or this.process.email "/"}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Links naar IPDC/LPDC</:label>
+              <:content>
+                {{#if this.process.ipdcInstances.length}}
+                  {{#each this.process.ipdcInstances as |instance|}}
+                    <AuLinkExternal
+                      href="https://productencatalogus-v3.vlaanderen.be/instantie/{{instance.productNumber}}"
+                      class="au-u-flex"
+                    >
+                      {{language-string-set-nl instance.name}}
+                    </AuLinkExternal>
+                  {{/each}}
+                {{else}}
+                  /
+                {{/if}}
               </:content>
             </Item>
           </:left>
