--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -21,7 +21,7 @@
       <DataCard>
         <:header></:header>
         <:title>
-          Algemene info
+          Algemene informatie
         </:title>
         <:card as |Card|>
           <Card.Columns>
@@ -95,7 +95,7 @@
                 </:content>
               </Item>
               <Item>
-                <:label>Contact</:label>
+                <:label>Emailadres bestuur</:label>
                 <:content>
                   {{or
                     (contact-email this.process.publisher.primarySite.contacts)
@@ -146,7 +146,7 @@
         {{/if}}
       </:header>
       <:title>
-        Algemene info
+        Algemene informatie
       </:title>
       <:card as |Card|>
         <Card.Columns>
@@ -201,7 +201,7 @@
               </:content>
             </Item>
             <Item>
-              <:label>Contact</:label>
+              <:label>Emailadres bestuur</:label>
               <:content>
                 {{or
                   (contact-email this.process.publisher.primarySite.contacts)
