--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -20,7 +20,7 @@
             <AuLabel for="filter-classification">Type bestuur</AuLabel>
             <ProcessSelectByClassification
               @id="filter-classification"
-              @selected={{this.classification}}
+              @selected={{this.selectedClassification}}
               @onChange={{this.setClassification}}
               class="grow"
             />
