Make reset all filters button work for process step type filter

--- a/app/components/process-step-select-by-type.hbs
+++ b/app/components/process-step-select-by-type.hbs
@@ -5,8 +5,8 @@
     @loadingMessage="Aan het laden..."
     @noMatchesMessage="Geen resultaten"
     @options={{this.types}}
-    @selected={{this.type}}
-    @onChange={{this.setType}}
+    @selected={{@selected}}
+    @onChange={{@onChange}}
     @triggerId={{@id}}
     as |type|
   >
