--- a/app/templates/process-steps/index.hbs
+++ b/app/templates/process-steps/index.hbs
@@ -20,7 +20,7 @@
             <AuLabel for="filter-type">Type</AuLabel>
             <ProcessStepSelectByType
               @id="filter-type"
-              @selected={{this.type}}
+              @selected={{this.selectedType}}
               @onChange={{this.setType}}
               class="grow"
             />
