--- a/app/components/ipdc-multiple-select.hbs
+++ b/app/components/ipdc-multiple-select.hbs
@@ -4,12 +4,12 @@
     @searchMessage="Typ om te zoeken"
     @loadingMessage="Aan het laden ..."
     @noMatchesMessage="Geen resultaten"
-    @search={{perform this.loadIpdcInstancesTask}}
+    @search={{perform this.loadIpdcProductsTask}}
     @selected={{@selected}}
     @onChange={{@onChange}}
-    as |draftIpdcInstance|
+    as |draftIpdcProduct|
   >
-    {{language-string-set-nl draftIpdcInstance.name}}
-    ({{draftIpdcInstance.productNumber}})
+    {{language-string-set-nl draftIpdcProduct.name}}
+    ({{draftIpdcProduct.productNumber}})
   </PowerSelectMultiple>
 </div>
