--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -45,16 +45,11 @@
                 <c.content>
                   <AuList @divider={{true}} as |Item|>
                     <Item>Raadpleeg processen</Item>
-                    <Item>Doorzoek processtappen</Item>
                   </AuList>
                 </c.content>
                 <c.footer>
                   <div class="au-u-h-functional au-o-flow au-o-flow--small">
-                    <AuLink @skin="button" @route="processes">Processen</AuLink>
-                    <AuLink
-                      @skin="button-secondary"
-                      @route="process-steps"
-                    >Processtappen</AuLink>
+                    <AuLink @skin="button" @route="processes">Toon Processen</AuLink>
                   </div>
                 </c.footer>
               </AuCard>
