--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -79,8 +79,8 @@
                 <:label>Links naar IPDC/LPDC</:label>
                 <:content>
                   <IpdcMultipleSelect
-                    @selected={{this.draftIpdcInstances}}
-                    @onChange={{this.setDraftIpdcInstances}}
+                    @selected={{this.draftIpdcProducts}}
+                    @onChange={{this.setDraftIpdcProducts}}
                   />
                   <div class="au-u-flex au-u-flex--between">
                     <AuHelpText
@@ -170,13 +170,10 @@
             <Item>
               <:label>Links naar IPDC/LPDC</:label>
               <:content>
-                {{#if this.process.ipdcInstances.length}}
-                  {{#each this.process.ipdcInstances as |instance|}}
-                    <AuLinkExternal
-                      href="https://productencatalogus-v3.vlaanderen.be/instantie/{{instance.productNumber}}"
-                      class="au-u-flex"
-                    >
-                      {{language-string-set-nl instance.name}}
+                {{#if this.process.ipdcProducts.length}}
+                  {{#each this.process.ipdcProducts as |product|}}
+                    <AuLinkExternal href="{{product.url}}" class="au-u-flex">
+                      {{language-string-set-nl product.name}}
                     </AuLinkExternal>
                   {{/each}}
                 {{else}}
