--- a/app/styles/components/_bpmn-viewer.scss
+++ b/app/styles/components/_bpmn-viewer.scss
@@ -1,6 +1,7 @@
 .bpmn-container {
   flex: none;
   height: 500px;
+  width: 100%;
   border: 1px solid var(--au-gray-200);
   border-radius: $au-radius;
   overflow: hidden;
