Disable downloading visio as png or svg

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -594,6 +594,7 @@
         </AuButton>
         <AuButton
           @skin="secondary"
+          @disabled={{not this.latestDiagramAsSvg}}
           {{on "click" (perform this.downloadLatestDiagram "png")}}
         >
           Afbeelding
@@ -601,6 +602,7 @@
         </AuButton>
         <AuButton
           @skin="secondary"
+          @disabled={{not this.latestDiagramAsSvg}}
           {{on "click" (perform this.downloadLatestDiagram "svg")}}
         >
           Vectorafbeelding
